--- a/OOP/OOP.vcxproj.filters
+++ b/OOP/OOP.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Person.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
