--- a/OOP/OOP.vcxproj
+++ b/OOP/OOP.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Contacts.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="Person.h" />
   </ItemGroup>
