--- a/OOP/OOP.vcxproj.filters
+++ b/OOP/OOP.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Person.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Contacts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
